--- a/data_PCA.ipynb
+++ b/data_PCA.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " # Performs the PCA analysis on the raw data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -37,6 +44,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the folder in which data are stored."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -49,7 +63,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Additional settings"
+    "# Additional settings\n",
+    "Set the data you want to analyse and the labels to display with a dataset."
    ]
   },
   {
@@ -62,6 +77,13 @@
     "\n",
     "order = {'infection': ['healthy', 'infected'],\n",
     "         'dataset': ['HBE', 'Lung', '293T', 'Calu-3', 'A549']}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read the data from the designated folder"
    ]
   },
   {
@@ -246,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model import and preprocessing"
+    "# Data import and preprocessing"
    ]
   },
   {
@@ -296,151 +318,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A549_Healthy_mean</th>\n",
-       "      <th>A549_Infected_mean</th>\n",
-       "      <th>CALU_Healthy_mean</th>\n",
-       "      <th>CALU_Infected_mean</th>\n",
-       "      <th>Lung_Healthy_mean</th>\n",
-       "      <th>Lung_Infected_mean</th>\n",
-       "      <th>NHBE_Healthy_mean</th>\n",
-       "      <th>NHBE_Infected_mean</th>\n",
-       "      <th>T_Healthy_mean</th>\n",
-       "      <th>T_Infected_mean</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>61.409914</td>\n",
-       "      <td>69.080277</td>\n",
-       "      <td>116.277983</td>\n",
-       "      <td>119.457355</td>\n",
-       "      <td>46.139842</td>\n",
-       "      <td>6.954333</td>\n",
-       "      <td>66.039087</td>\n",
-       "      <td>57.549820</td>\n",
-       "      <td>86.446268</td>\n",
-       "      <td>92.012819</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.035317</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.012096</td>\n",
-       "      <td>38.788173</td>\n",
-       "      <td>430.698370</td>\n",
-       "      <td>0.071729</td>\n",
-       "      <td>0.094904</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>46.854748</td>\n",
-       "      <td>45.177975</td>\n",
-       "      <td>42.907891</td>\n",
-       "      <td>26.128591</td>\n",
-       "      <td>15.838985</td>\n",
-       "      <td>6.524210</td>\n",
-       "      <td>23.400222</td>\n",
-       "      <td>22.284725</td>\n",
-       "      <td>48.625804</td>\n",
-       "      <td>39.619417</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>134.905287</td>\n",
-       "      <td>125.547454</td>\n",
-       "      <td>19.920375</td>\n",
-       "      <td>20.327953</td>\n",
-       "      <td>3.835999</td>\n",
-       "      <td>2.119917</td>\n",
-       "      <td>146.468255</td>\n",
-       "      <td>109.037748</td>\n",
-       "      <td>43.484077</td>\n",
-       "      <td>39.832963</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>73.182231</td>\n",
-       "      <td>81.836277</td>\n",
-       "      <td>44.786324</td>\n",
-       "      <td>23.966473</td>\n",
-       "      <td>11.765404</td>\n",
-       "      <td>26.192000</td>\n",
-       "      <td>66.883642</td>\n",
-       "      <td>66.451842</td>\n",
-       "      <td>81.795080</td>\n",
-       "      <td>63.541433</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   A549_Healthy_mean  A549_Infected_mean  CALU_Healthy_mean  \\\n",
-       "0          61.409914           69.080277         116.277983   \n",
-       "1           0.000000            0.035317           0.000000   \n",
-       "2          46.854748           45.177975          42.907891   \n",
-       "3         134.905287          125.547454          19.920375   \n",
-       "4          73.182231           81.836277          44.786324   \n",
-       "\n",
-       "   CALU_Infected_mean  Lung_Healthy_mean  Lung_Infected_mean  \\\n",
-       "0          119.457355          46.139842            6.954333   \n",
-       "1            0.012096          38.788173          430.698370   \n",
-       "2           26.128591          15.838985            6.524210   \n",
-       "3           20.327953           3.835999            2.119917   \n",
-       "4           23.966473          11.765404           26.192000   \n",
-       "\n",
-       "   NHBE_Healthy_mean  NHBE_Infected_mean  T_Healthy_mean  T_Infected_mean  \n",
-       "0          66.039087           57.549820       86.446268        92.012819  \n",
-       "1           0.071729            0.094904        0.000000         0.000000  \n",
-       "2          23.400222           22.284725       48.625804        39.619417  \n",
-       "3         146.468255          109.037748       43.484077        39.832963  \n",
-       "4          66.883642           66.451842       81.795080        63.541433  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.head()"
+    "Prepare data for the analysis"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -464,17 +346,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PCA"
+    "# PCA\n",
+    "Run the PCA analysis"
    ]
   },
   {
@@ -511,72 +387,6 @@
     "df_pca['label'] = ['explained variance', 'explained variance ratio']\n",
     "df_pca = df_pca.set_index('label')\n",
     "df_pca.to_csv(\"results_PCA_data\\\\\"+\"explained_variance.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PC1</th>\n",
-       "      <th>PC2</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>label</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>explained variance</th>\n",
-       "      <td>6.567187e+08</td>\n",
-       "      <td>1.289588e+08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>explained variance ratio</th>\n",
-       "      <td>6.842919e-01</td>\n",
-       "      <td>1.343733e-01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                   PC1           PC2\n",
-       "label                                               \n",
-       "explained variance        6.567187e+08  1.289588e+08\n",
-       "explained variance ratio  6.842919e-01  1.343733e-01"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_pca"
    ]
   },
   {
@@ -646,24 +456,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.68429195, 0.13437334])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "pca_explained = pca.explained_variance_ratio_\n",
-    "pca_explained"
+    "Plot the results"
    ]
   },
   {
@@ -782,7 +578,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variance explanation"
+    "# Variance explanation\n",
+    "Calculate the explained variance within each principal component by each factor and store the results to a csv file"
    ]
   },
   {
@@ -967,7 +764,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# t-SNE"
+    "# t-SNE\n",
+    "Performs the t-SNE analysis and visualises the results."
    ]
   },
   {
@@ -1062,9 +860,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37364bitbasecondacd385dda59854559b44e3f82ede14f15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
