--- a/model_PCA.ipynb
+++ b/model_PCA.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " #  Performs the PCA analysis on the models obtained with different MEMs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -35,6 +42,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the folder in which data are stored."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -47,7 +61,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Additional settings"
+    "# Additional settings\n",
+    "Set the data you want to analyse and the labels to display with a dataset."
    ]
   },
   {
@@ -90,7 +105,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Metadata import"
+    "# Metadata import\n",
+    "Read the data from the designated folder"
    ]
   },
   {
@@ -269,15 +285,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#file_names = [file_name for file_name in os.listdir(folder) if file_name.endswith('csv')]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -306,156 +313,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>reaction_ID</th>\n",
-       "      <th>tINIT_model_H_293T_alt</th>\n",
-       "      <th>tINIT_model_H_A549_alt</th>\n",
-       "      <th>tINIT_model_H_CALU_alt</th>\n",
-       "      <th>tINIT_model_H_Lung_alt</th>\n",
-       "      <th>tINIT_model_H_NHBE</th>\n",
-       "      <th>tINIT_model_I_293T_alt</th>\n",
-       "      <th>tINIT_model_I_A549_alt</th>\n",
-       "      <th>tINIT_model_I_CALU_alt</th>\n",
-       "      <th>tINIT_model_I_Lung_alt</th>\n",
-       "      <th>tINIT_model_I_NHBE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>HMR_3905</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>HMR_3907</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>HMR_4137</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>HMR_4281</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>HMR_4388</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  reaction_ID  tINIT_model_H_293T_alt  tINIT_model_H_A549_alt  \\\n",
-       "0    HMR_3905                     1.0                     1.0   \n",
-       "1    HMR_3907                     1.0                     1.0   \n",
-       "2    HMR_4137                     1.0                     1.0   \n",
-       "3    HMR_4281                     1.0                     1.0   \n",
-       "4    HMR_4388                     1.0                     1.0   \n",
-       "\n",
-       "   tINIT_model_H_CALU_alt  tINIT_model_H_Lung_alt  tINIT_model_H_NHBE  \\\n",
-       "0                     1.0                     1.0                 1.0   \n",
-       "1                     1.0                     1.0                 1.0   \n",
-       "2                     1.0                     1.0                 0.0   \n",
-       "3                     1.0                     1.0                 1.0   \n",
-       "4                     1.0                     1.0                 1.0   \n",
-       "\n",
-       "   tINIT_model_I_293T_alt  tINIT_model_I_A549_alt  tINIT_model_I_CALU_alt  \\\n",
-       "0                     1.0                     1.0                     1.0   \n",
-       "1                     1.0                     1.0                     1.0   \n",
-       "2                     1.0                     1.0                     1.0   \n",
-       "3                     1.0                     1.0                     1.0   \n",
-       "4                     1.0                     1.0                     1.0   \n",
-       "\n",
-       "   tINIT_model_I_Lung_alt  tINIT_model_I_NHBE  \n",
-       "0                     0.0                 1.0  \n",
-       "1                     1.0                 1.0  \n",
-       "2                     1.0                 0.0  \n",
-       "3                     1.0                 1.0  \n",
-       "4                     1.0                 1.0  "
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.head()"
+    "Prepare data for the analysis"
    ]
   },
   {
@@ -474,7 +335,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PCA"
+    "# PCA\n",
+    "Run the PCA analysis"
    ]
   },
   {
@@ -520,6 +382,13 @@
    "outputs": [],
    "source": [
     "pca_explained = pca.explained_variance_ratio_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the results"
    ]
   },
   {
@@ -580,7 +449,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variance explanation"
+    "# Variance explanation\n",
+    "Calculate the explained variance within each principal component by each factor and store the results to a csv file"
    ]
   },
   {
@@ -765,7 +635,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# t-SNE"
+    "# t-SNE\n",
+    "Performs the t-SNE analysis and visualises the results."
    ]
   },
   {
@@ -858,9 +729,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37364bitbasecondacd385dda59854559b44e3f82ede14f15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
