--- a/model_PCA_sampling.ipynb
+++ b/model_PCA_sampling.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Performs the PCA analysis on the model fluxes  \n",
+    "Only the reactions with at least one flux sample different than zero are kept"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -35,6 +43,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the folder in which data are stored."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -47,7 +62,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Additional settings"
+    "# Additional settings\n",
+    "Set the data you want to analyse and the labels to display with a dataset."
    ]
   },
   {
@@ -90,7 +106,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Metadata import"
+    "# Metadata import\n",
+    "Read the data from the designated folder"
    ]
   },
   {
@@ -268,15 +285,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#file_names = [file_name for file_name in os.listdir(folder) if file_name.endswith('csv')]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -333,23 +341,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5941, 10)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.shape"
+    "Prepare data for the analysis"
    ]
   },
   {
@@ -378,7 +373,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PCA"
+    "# PCA\n",
+    "Run the PCA analysis"
    ]
   },
   {
@@ -424,6 +420,13 @@
    "outputs": [],
    "source": [
     "pca_explained = pca.explained_variance_ratio_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the results"
    ]
   },
   {
@@ -494,7 +497,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variance explanation"
+    "# Variance explanation\n",
+    "Calculate the explained variance within each principal component by each factor and store the results to a csv file"
    ]
   },
   {
@@ -679,7 +683,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# t-SNE"
+    "# t-SNE\n",
+    "Performs the t-SNE analysis and visualises the results."
    ]
   },
   {
@@ -696,20 +701,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\miham\\AppData\\Roaming\\Python\\Python37\\site-packages\\sklearn\\manifold\\_t_sne.py:783: FutureWarning: The default initialization in TSNE will change from 'random' to 'pca' in 1.2.\n",
-      "  FutureWarning,\n",
-      "C:\\Users\\miham\\AppData\\Roaming\\Python\\Python37\\site-packages\\sklearn\\manifold\\_t_sne.py:793: FutureWarning: The default learning rate in TSNE will change from 200.0 to 'auto' in 1.2.\n",
-      "  FutureWarning,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tSNE = TSNE(n_components=n_components, perplexity = perplexity,  n_iter=5000)\n",
     "comps = tSNE.fit_transform(M)\n",
