--- a/model_statistics.ipynb
+++ b/model_statistics.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Performs the basic analyses of the extracted models \n",
+    "* model sizes\n",
+    "* Jaccard index calculation\n",
+    "* reaction specificity analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -27,6 +37,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the folder in which data are stored."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -39,7 +56,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Additional settings"
+    "# Additional settings\n",
+    "Set the data you want to analyse and the labels to display with a dataset."
    ]
   },
   {
@@ -69,7 +87,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Metadata import"
+    "# Metadata import\n",
+    "Read the data from the designated folder"
    ]
   },
   {
@@ -260,7 +279,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model sizes\n"
+    "# Model sizes\n",
+    "Assess the model sizes"
    ]
   },
   {
@@ -379,6 +399,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the model sizes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
@@ -429,7 +456,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Statistics"
+    "## Statistics\n",
+    "Save the basic statistics to a file"
    ]
   },
   {
@@ -456,7 +484,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## p-values"
+    "## p-values\n",
+    "Calculate the significances of model size differences between the groups"
    ]
   },
   {
@@ -503,7 +532,7 @@
    "metadata": {},
    "source": [
     "# Jaccard index\n",
-    "* within vs. between a factor\n",
+    "Calculate Jaccard indices within vs. between a factor.\n",
     "\n",
     "Example:\n",
     "* within: combinations between the models for GIMME\n",
@@ -730,9 +759,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37364bitbasecondacd385dda59854559b44e3f82ede14f15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
