--- a/model_statistics_sampling.ipynb
+++ b/model_statistics_sampling.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Performs the basic analyses of flux samples of the extracted models\n",
+    "* model sizes\n",
+    "* Jaccard index calculation\n",
+    "* reaction specificity analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -27,6 +37,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the folder in which data are stored."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -39,7 +56,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Additional settings"
+    "# Additional settings\n",
+    "Set the data you want to analyse and the labels to display with a dataset."
    ]
   },
   {
@@ -69,7 +87,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Metadata import"
+    "# Metadata import\n",
+    "Read the data from the designated folder"
    ]
   },
   {
@@ -247,65 +266,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'GIMME': ['Gimme_293T_sample_H',\n",
-       "  'Gimme_293T_sample_I',\n",
-       "  'Gimme_A549_sample_H',\n",
-       "  'Gimme_A549_sample_I',\n",
-       "  'Gimme_CALU_sample_H',\n",
-       "  'Gimme_CALU_sample_I',\n",
-       "  'Gimme_Lung_sample_H',\n",
-       "  'Gimme_Lung_sample_I',\n",
-       "  'Gimme_NHBE_sample_H',\n",
-       "  'Gimme_NHBE_sample_I'],\n",
-       " 'iMAT': ['iMAT_293T_sample_H',\n",
-       "  'iMAT_293T_sample_I',\n",
-       "  'iMAT_A549_sample_H',\n",
-       "  'iMAT_A549_sample_I',\n",
-       "  'iMAT_CALU_sample_H',\n",
-       "  'iMAT_CALU_sample_I',\n",
-       "  'iMAT_Lung_sample_H',\n",
-       "  'iMAT_Lung_sample_I',\n",
-       "  'iMAT_NHBE_sample_H',\n",
-       "  'iMAT_NHBE_sample_I'],\n",
-       " 'INIT': ['init_293T_sample_H',\n",
-       "  'init_293T_sample_I',\n",
-       "  'init_A549_sample_H',\n",
-       "  'init_A549_sample_I',\n",
-       "  'init_CALU_sample_H',\n",
-       "  'init_CALU_sample_I',\n",
-       "  'init_Lung_sample_H',\n",
-       "  'init_Lung_sample_I',\n",
-       "  'init_NHBE_sample_H',\n",
-       "  'init_NHBE_sample_I'],\n",
-       " 'tINIT': ['Tinit_293T_sample_H',\n",
-       "  'Tinit_293T_sample_I',\n",
-       "  'Tinit_A549_sample_H',\n",
-       "  'Tinit_A549_sample_I',\n",
-       "  'Tinit_CALU_sample_H',\n",
-       "  'Tinit_CALU_sample_I',\n",
-       "  'Tinit_Lung_sample_H',\n",
-       "  'Tinit_Lung_sample_I',\n",
-       "  'Tinit_NHBE_sample_H',\n",
-       "  'Tinit_NHBE_sample_I']}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "groups[\"MEM\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -355,7 +315,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model sizes\n"
+    "# Model sizes\n",
+    "Assess the model sizes\n"
    ]
   },
   {
@@ -474,6 +435,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the model sizes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -522,7 +490,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Statistics"
+    "## Statistics\n",
+    "Save the basic statistics to a file"
    ]
   },
   {
@@ -549,7 +518,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### p-values"
+    "### p-values\n",
+    "Calculate the significances of model size differences between the groups"
    ]
   },
   {
@@ -596,7 +566,7 @@
    "metadata": {},
    "source": [
     "# Jaccard index\n",
-    "* within vs. between a factor\n",
+    "Calculate Jaccard indices within vs. between a factor.\n",
     "\n",
     "Example:\n",
     "* within: combinations between the models for GIMME\n",
@@ -962,9 +932,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37364bitbasecondacd385dda59854559b44e3f82ede14f15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
