--- a/reactions_enrichment.ipynb
+++ b/reactions_enrichment.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Assess the enrichment of metabolic reactions\n",
     "Compares pairs (healthy, infected) on a reaction level based on flux samples. Calculates p-values, fold-changes and enrichment. Also, extracts active reactions per pairs (reactions that are active - nonzero) in at least one model within a pair."
    ]
   },
@@ -21,6 +22,13 @@
     "\n",
     "from scipy.stats import ks_2samp\n",
     "import statsmodels.stats.multitest as multi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set folders"
    ]
   },
   {
@@ -112,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generate pairs (healthy, infected)"
+    "Generate pairs of models (healthy, infected)"
    ]
   },
   {
@@ -134,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compare pairs"
+    "Go through the predefined pairs and for each reaction assess if the difference between healthy and infected is significant"
    ]
   },
   {
@@ -218,7 +226,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extract active reactions"
+    "## Extract active reactions\n",
+    "\n",
+    "Extract and save (to CSV) the reactions that are active in healthy and infected models for each MEM and dataset"
    ]
   },
   {
@@ -307,9 +317,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37364bitbasecondacd385dda59854559b44e3f82ede14f15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
