--- a/reactions_subsystems_enrichment.ipynb
+++ b/reactions_subsystems_enrichment.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Produces an XLSX file with enriched reactions per subsystem for all models."
+    "# Assess the enrichment of metabolic subsystems\n",
+    "\n",
+    "Produces an XLSX file with enriched reactions per subsystem for all models. Does not compute anything but only processes the CSV files produced by `reactions_enrichment.ipynb`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +24,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set folders"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +41,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"model\\\\Human-GEM_subsystems.txt\", sep=\";\")\n",
     "df = df.rename(columns={'rxn': 'reaction'})\n",
     "df = df.set_index('reaction')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.subsystem.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read and parse"
    ]
   },
   {
@@ -341,9 +366,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37364bitbasecondacd385dda59854559b44e3f82ede14f15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
