--- a/subsystems_enrichment.ipynb
+++ b/subsystems_enrichment.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Performs subsystems enrichment analysis based on the hypergeometric test."
+    "# Performs subsystems enrichment analysis based on the hypergeometric test."
    ]
   },
   {
@@ -24,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the folder in which data are stored."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -33,6 +40,13 @@
     "active_reactions_folder = \"results_active_reactions_pairs\"\n",
     "\n",
     "results_folder = \"results_enrichment_subsystems\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read the subsystems data"
    ]
   },
   {
@@ -50,15 +64,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hypergeometric test"
+    "## Hypergeometric test\n",
+    "Go through the results of the reactions' enrichment analyses and use those to perform the subsystems' enrichment analysis.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -128,9 +136,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37364bitbasecondacd385dda59854559b44e3f82ede14f15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
