--- a/model_PCA.ipynb
+++ b/model_PCA.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " #  Performs the PCA analysis on the models obtained with different MEMs"
+    " #  PCA analysis \n",
+    "This notebook performs a PCA analysis on the models obtained with different MEMs, from different datasets and using different conditions (i.e., healthy and infected)."
    ]
   },
   {
