--- a/model_PCA_sampling.ipynb
+++ b/model_PCA_sampling.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performs the PCA analysis on the model fluxes  \n",
-    "Only the reactions with at least one flux sample different than zero are kept"
+    "# PCA analysis of flux samples\n",
+    "\n",
+    "This notebook performs a PCA analysis on the models obtained with different MEMs, from different datasets and using different conditions (i.e., healthy and infected). Only the reactions with at least one flux sample different than zero are kept in the analysis."
    ]
   },
   {
