--- a/model_statistics.ipynb
+++ b/model_statistics.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performs the basic analyses of the extracted models \n",
-    "* model sizes\n",
-    "* Jaccard index calculation\n",
-    "* reaction specificity analysis"
+    "# Basic analyses\n",
+    "Performs the basic analyses of the extracted models. These include the analysis of observed factors (model extraction method, dataset, and infection) on \n",
+    "* model sizes,\n",
+    "* Jaccard indices.\n",
+    "* reaction specificity."
    ]
   },
   {
