--- a/reactions_enrichment.ipynb
+++ b/reactions_enrichment.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Assess the enrichment of metabolic reactions\n",
-    "Compares pairs (healthy, infected) on a reaction level based on flux samples. Calculates p-values, fold-changes and enrichment. Also, extracts active reactions per pairs (reactions that are active - nonzero) in at least one model within a pair."
+    "Compares pairs (healthy, infected) on a reaction level based on flux samples. Calculates p-values indicating significance of difference between reaction activities in a healthy and an infected model with the two-sample Kolmogorov–Smirnov test. Also, calculates fold changes of a reaction between a reaction in a healthy ($R_h$) and a reaction in an infected model ($R_i$):\n",
+    "$$   FC = \\frac{\\overline{R_i} - \\overline{R_h}}{\\left|\\overline{R_i} + \\overline{R_h}\\right|} $$"
    ]
   },
   {
