--- a/subsystems_enrichment.ipynb
+++ b/subsystems_enrichment.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performs subsystems enrichment analysis based on the hypergeometric test."
+    "# Subsystems enrichment analysis \n",
+    "\n",
+    "Performs the subsystems enrichment analysis based on the hypergeometric test:\n",
+    "$$P(x \\geq k) = 1 - hypergeom.cdf(k-1, M, n, N)$$\n",
+    "\n",
+    "* k: number of diferentially expressed reactions in a subsystem,\n",
+    "* n: number of diferentially expressed reactions in the model,\n",
+    "* N: number of reactions in a subsystem,\n",
+    "* M: number of reactions in the model.\n",
+    "\n"
    ]
   },
   {
