--- a/model_statistics_sampling.ipynb
+++ b/model_statistics_sampling.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performs the basic analyses of flux samples of the extracted models\n",
-    "* model sizes\n",
-    "* Jaccard index calculation\n",
-    "* reaction specificity analysis"
+    "# Basic analyses of flux samples\n",
+    "Performs the basic analyses of the flux samples obtained with the extracted models. These include the analysis of observed factors (model extraction method, dataset, and infection) on \n",
+    "* model sizes,\n",
+    "* Jaccard indices.\n",
+    "* reaction specificity."
    ]
   },
   {
@@ -98,30 +99,6 @@
    "outputs": [],
    "source": [
     "models = [os.path.splitext(name)[0] for name in os.listdir(folder) if name.endswith('csv')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Gimme_293T_sample_H',\n",
-       " 'Gimme_293T_sample_I',\n",
-       " 'Gimme_A549_sample_H',\n",
-       " 'Gimme_A549_sample_I',\n",
-       " 'Gimme_CALU_sample_H']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "models[:5]"
    ]
   },
   {
